feat(ecom):added async script loading

--- a/ecom/cart/public/index.html
+++ b/ecom/cart/public/index.html
@@ -9,10 +9,7 @@
     </head>
 
     <body>
-        <div id="dev-products" style="color: white; background-color: navy; padding: 10px;"></div>
-        <br>
-        <br>
-        <div id="dev-cart" style="color: red; background-color: aqua; padding: 10px;"></div>
+        <div id="dev-cart"></div>
     </body>
 
 </html>
