feat(ecom): conditional rendering based on isolation/production context

--- a/ecom/container/public/index.html
+++ b/ecom/container/public/index.html
@@ -9,10 +9,10 @@
     </head>
 
     <body>
-        <div id="dev-products" style="color: white; background-color: navy; padding: 10px;"></div>
+        <div id="my-products" style="color: white; background-color: navy; padding: 10px;"></div>
         <br>
         <br>
-        <div id="dev-cart" style="color: red; background-color: aqua; padding: 10px;"></div>
+        <div id="my-cart" style="color: red; background-color: aqua; padding: 10px;"></div>
     </body>
 
 </html>
